--- a/orders/templates/orders/start_order.html
+++ b/orders/templates/orders/start_order.html
@@ -31,8 +31,8 @@
         }
 
         button {
-            width: 700px;
-            height: 600px;
+            width: 800px;
+            height: 900px;
             font-size: 120px;
             font-weight: bold;
             padding: 40px 80px;
@@ -56,21 +56,32 @@
             margin-top: 100px;
             display: none;
         }
+
+        .en-text {
+            font-size: 0.5em; /* "Place an order" 텍스트 크기 줄이기 */
+        }
     </style>
 </head>
 <body>
 <h1>여기에서 주문하세요!</h1>
 <p>화면을 터치해 주세요</p>
+<p>Please touch the screen</p>
 <div class="button-container">
     <form id="order-form" method="post" action="{% url 'orders:face_recognition' %}">
         {% csrf_token %}
-        <button type="submit" id="order-button">주문하기</button>
+        <button type="submit" id="order-button">
+            <span class="kr-text">주문하기</span>
+            <span class="en-text">Place an order</span>
+        </button>
         <div class="spinner-container" id="spinner">
             <div class="spinner-border" style="width: 15rem; height: 15rem;" role="status">
                 <span class="visually-hidden"></span>
             </div>
         </div>
-        <div class="status" id="status">얼굴 인식을 진행하고 있습니다</div>
+        <div class="status" id="status">
+            <span class="kr-text">얼굴 인식을 진행하고 있습니다</span>
+            <span class="en-text">Facial recognition is being performed</span>
+        </div>
     </form>
 </div>
 
