feat: 결제 요청 음성 인식 구현
- 메뉴 화면에서 결제 요청을 음성으로 입력했을 때, 해당 요청이 결제인지 확인하고 결제 후 주문번호 출력
- 요청으로부터 값을 입력받아 js 버튼을 눌러주는 로직 구현

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -423,13 +423,19 @@ function startSpeechRecognition() {
                     
                 })
                 .then(function (response) {
-                    const responseText = response.data.responseText;
-                    const recommended_menu = response.data.recommended_menu;
-                    console.log('서버 응답:', responseText);
-                    localStorage.setItem('recommended_menu', JSON.stringify(recommended_menu));
-                    localStorage.setItem('customer_message', responseText);
-                    window.location.href = '/orders/elder_menu/';
-                    console.log("중요부분 타고 있니>>>>>>>>>>>>")
+                    //const responseText = response.data.responseText;
+                    //const recommended_menu = response.data.recommended_menu;
+                    const result = response.data.result;
+                    console.log("result >>>>>>>", result);
+                    //console.log('서버 응답:', responseText);
+                    //localStorage.setItem('recommended_menu', JSON.stringify(recommended_menu));
+                    //localStorage.setItem('customer_message', responseText);
+                    //window.location.href = '/orders/elder_menu/';
+                    //console.log("중요부분 타고 있니>>>>>>>>>>>>")
+                    if (result == 1) {
+                    console.log("if문 탔는지 >>>>>>>>")
+                    triggerProceedToPay();
+                    }
                 })
                 .catch(function (error) {
                     console.error('에러:', error);
@@ -445,6 +451,12 @@ const redirectButton = document.getElementById('redirectButton');
         // 버튼 클릭 시 orders/templates/menu.html로 리다이렉트
         window.location.href = '/orders/menu/';
 })
+
+function triggerProceedToPay() {
+    console.log("triggerProceedToPay 탔는지 >>>>>>>")
+    // Option 1: Simulate a click event on the pay button
+    document.getElementById("submitOrderBtn").click();
+}
 
 </script>
 <script src="{% static 'js/cart.js' %}"></script>
