chore: 언어별 탬플릿 기능 (django translation)
장고 번역 기능을 이용 탬플릿 번역 및 모델번역을 통해 각 언어에 맞추어 번역을 입력하므로 브라우저 언어 변경시 해당 언어에 맞추어 입력 및 출력을 변경

--- a/orders/templates/orders/menu.html
+++ b/orders/templates/orders/menu.html
@@ -428,6 +428,8 @@
     const speechInputIn = "{% trans '음성입력중' %}"; // 음성입력 중 표시
     const speechInput = "{% trans '음성입력' %}"; // 음성입력 표시
     const won = "{% trans '원' %}"; // 원 표시
+    const count = "{% trans '개' %}"; // 원 표시
+    const del = "{% trans '삭제' %}"; // 원 표시
 </script>
 
 <!-- 외부 라이브러리 및 사용자 정의 스크립트 로드 -->
