--- a/orders/templates/orders/menu.html
+++ b/orders/templates/orders/menu.html
@@ -432,13 +432,13 @@
     }
 
     // 음성입력 및 출력에 사용되는 언어 코드 설정
-    const languageCodeIn = '{% trans 'input' %}'; // 음성입력 언어 선택
-    const languageCodeOut = '{% trans 'output' %}'; // 음성출력 언어 선택
+    const languageCodeIn = "{% trans 'input' %}"; // 음성입력 언어 선택
+    const languageCodeOut = "{% trans 'output' %}"; // 음성출력 언어 선택
     const speechInputIn = "{% trans '음성입력중' %}"; // 음성입력 중 표시
     const speechInput = "{% trans '음성입력' %}"; // 음성입력 표시
     const won = "{% trans '원' %}"; // 원 표시
     const count = "{% trans '개' %}"; // 원 표시
-    const del = "{% trans '삭제' %}"; // 원 표시
+    const DelItem = "{% trans '아이템' %}"; // 원 표시
 </script>
 
 <!-- 외부 라이브러리 및 사용자 정의 스크립트 로드 -->
