chore: admin-page 대시보드 및 테마적용
admin-page상에 대시보드기능 추가 및 테마를 추가

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>추천 메뉴 및 장바구니</title>
+    <link rel="icon" type="image/png" sizes="96x96" href="/static/img/개.png">
+    <title>Silver Lining</title>
     <style>
         body {
             font-family: Arial, sans-serif;
