--- a/orders/templates/orders/elder_start.html
+++ b/orders/templates/orders/elder_start.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>주문하기</title>
+    <link rel="icon" type="image/png" sizes="96x96" href="/static/img/개.png">
+    <title>Silver Lining</title>
     <style>
         body {
             font-family: Arial, sans-serif;
