--- a/orders/templates/orders/order_complete.html
+++ b/orders/templates/orders/order_complete.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>주문 완료</title>
+    <link rel="icon" type="image/png" sizes="96x96" href="/static/img/개.png">
+    <title>Silver Lining</title>
     <!-- 부트스트랩 CSS 추가 -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
