fix: 장바구니 메뉴 추가와 장바구니 조회 오류 개선
- 장바구니에 메뉴를 추가할 때 해당 데이터를 json 형태로 주고 받을 수 있도록 변경
- 장바구니 조회 시 undefined 발생 오류 개선: 해당 부분을 조건문으로 차단

--- a/orders/templates/orders/elder_menu.html
+++ b/orders/templates/orders/elder_menu.html
@@ -271,7 +271,6 @@
         <div class="cartarrowContainer">        
             <div id="cartContainer" class="cart">
                 <div id="cartItems">
-                    {% comment %} axios 써야 함 {% endcomment %}
                     <!-- Cart items will be populated here dynamically -->
                 </div>
             </div>
@@ -367,7 +366,7 @@
             console.error('메뉴 업데이트 중 오류 발생:', error);
         });
 
-        // 장바구니 조회}
+        // 장바구니 조회
         console.log("장바구니 조회 username >>>>> " )
         
         axios.get('/orders/cart/')
@@ -375,7 +374,6 @@
             const cartData = response.data.context;
             console.log("cartData >>>>>", cartData)
             console.log("cartData type >>>", typeof cartData)
-            cart = cartData
             ? cartData
             :{};
             updateCartDisplay(cartData);
